# prompt-protector

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  workflow.yml
docs/: DOCKER.md
examples/: README.md  protector.yaml  protector_hybrid.yaml  protector_local_only.yaml
src/prompt_protector/: README.md  __init__.py  _json.py  _otel.py  _retry.py  auditor.py  cache.py  chat_gpt.py  cli.py  config.py  datastore.py  heuristics.py  input_auditor.py  output_auditor.py  prompt_protector.py  prompts.py  protector.py  redaction.py  rule_packs.py  schema.py  server.py  settings.py  streaming.py  types.py
src/prompt_protector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prompt_protector/backends/: README.md  __init__.py  anthropic_backend.py  base.py  composite.py  mock.py  openai_backend.py
src/prompt_protector/local/: README.md  __init__.py  base.py  llamacpp_backend.py  ollama_backend.py  onnx_backend.py  presidio_backend.py  spacy_backend.py  transformers_backend.py  vault.py
tests/: README.md  auditor_test.py  conftest.py  test_cache.py  test_config.py  test_heuristics.py  test_local_ollama.py  test_local_presidio.py  test_local_transformers.py  test_modes.py  test_protector.py  test_redaction.py  test_redaction_roundtrip.py  test_regressions.py  test_rule_packs.py  test_streaming.py
tests/live/: test_smoke.py
