[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-protector"
version = "1.0.0"
description = "Async-first, provider-agnostic safety layer for LLM input/output."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Tahoe-AI" }]
keywords = ["llm", "safety", "prompt-injection", "pii", "redaction", "guardrails"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core deps are intentionally tiny: no LLM SDK is required to import the
# package, since the heuristics + redaction layers stand alone. Bring your
# own backend via the optional extras below.
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.40"]
yaml = ["pyyaml>=6"]
server = ["fastapi>=0.110", "uvicorn>=0.30", "pydantic>=2", "pyyaml>=6"]
schema = ["jsonschema>=4", "pydantic>=2"]
otel = ["opentelemetry-api>=1.20"]
redis = ["redis>=5"]
vault = ["cryptography>=42"]

# Local-model backends — every entry is opt-in.
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]
spacy = ["spacy>=3.7"]
transformers = ["transformers>=4.40", "torch>=2.0"]
onnx = ["onnxruntime>=1.17"]
ollama = ["httpx>=0.27"]
llamacpp = ["llama-cpp-python>=0.2"]

# Convenience meta-extras
local-all = [
    "prompt-protector[presidio,transformers,onnx,ollama]",
]
all = [
    "prompt-protector[openai,anthropic,yaml,schema,otel,redis,vault,presidio,transformers,onnx,ollama]",
]

# Dev / test
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pyyaml>=6",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/tahoe-ai/prompt-protector"
Issues = "https://github.com/tahoe-ai/prompt-protector/issues"

[project.scripts]
prompt-protector = "prompt_protector.cli:main"
prompt-protector-server = "prompt_protector.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real provider APIs (gated on RUN_LIVE=1)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
